# box2d-jni

./: .gitignore  LICENSE  README.md  build.gradle  gradle.properties  local.properties  settings.gradle
.github/workflows/: ci.yml  push.yml  release.yml
buildSrc/: build.gradle
buildSrc/src/main/java/org/box2d/jni/: BuildSrc.java  BuildType.java  Flavor.java  JNI.java  Platform.java
buildSrc/src/main/java/org/box2d/jni/android/: ABI.java  AndroidAbi.java
gradle/: libs.versions.toml
modules/box2d/bindings/: build.gradle
modules/box2d/bindings/c/: CMakeLists.txt
modules/box2d/bindings/c/include/: common_tools.h
modules/box2d/bindings/c/src/: CMakeLists.txt  org_box2d_jni_libc_LibCStdlib.c
modules/box2d/core/: build.gradle
modules/box2d/core/src/main/java/org/box2d/jni/libc/: LibCStdlib.java
modules/box2d/core/src/main/java/org/box2d/jni/system/: Pointer.java  Struct.java
modules/libraries/bindings/: build.gradle
modules/libraries/bindings/c/: CMakeLists.txt
modules/libraries/bindings/c/include/: common_tools.h  glue.h
modules/libraries/bindings/c/src/: CMakeLists.txt  common_tools.c  org_box2d_jni_libc_LibC.c  org_box2d_jni_libc_LibCFloat.c  org_box2d_jni_libc_LibCMath.c  org_box2d_jni_libc_LibCStdint.c  org_box2d_jni_libc_LibCStdlib.c  org_box2d_jni_libc_LibCString.c  org_box2d_jni_system_JNI.c  org_box2d_jni_system_JNIB2.c  org_box2d_jni_system_Memory.c  org_box2d_jni_system_MemoryUtil.c  org_box2d_jni_system_Upcalls.c  org_box2d_jni_system_VarType.c
modules/libraries/bindings/c/src/box2d/: org_box2d_jni_b2JointType.c  org_box2d_jni_include_Base.c  org_box2d_jni_include_MathFunctions.c  org_box2d_jni_include_Types.c
modules/libraries/box2d-android/: build.gradle
modules/libraries/box2d-android/src/main/: AndroidManifest.xml
modules/libraries/box2d-bindings/: build.gradle
modules/libraries/box2d-bindings/c/: CMakeLists.txt
modules/libraries/box2d-bindings/c/include/: common_tools.h  glue.h
modules/libraries/box2d-bindings/c/include/box2d/jni/: org_box2d_jni_b2BodyType.h  org_box2d_jni_b2JointType.h  org_box2d_jni_b2ShapeType.h  org_box2d_jni_include_Base.h  org_box2d_jni_include_Id.h  org_box2d_jni_include_MathFunctions.h  org_box2d_jni_include_Types.h  org_box2d_jni_libc_LibCFloat.h  org_box2d_jni_libc_LibCMath.h  org_box2d_jni_libc_LibCStdint.h  org_box2d_jni_libc_LibCStdlib.h  org_box2d_jni_libc_LibCString.h  org_box2d_jni_system_JNI.h  org_box2d_jni_system_JNIB2.h  org_box2d_jni_system_Memory.h  org_box2d_jni_system_MemoryUtil.h  org_box2d_jni_system_Upcalls.h  org_box2d_jni_system_VarType.h
modules/libraries/box2d-bindings/c/src/: CMakeLists.txt  common_tools.c  org_box2d_jni_libc_LibCFloat.c  org_box2d_jni_libc_LibCMath.c  org_box2d_jni_libc_LibCStdint.c  org_box2d_jni_libc_LibCStdlib.c  org_box2d_jni_libc_LibCString.c  org_box2d_jni_system_JNI.c  org_box2d_jni_system_JNIB2.c  org_box2d_jni_system_Memory.c  org_box2d_jni_system_MemoryUtil.c  org_box2d_jni_system_Upcalls.c  org_box2d_jni_system_VarType.c
modules/libraries/box2d-bindings/c/src/box2d/: org_box2d_jni_b2BodyType.c  org_box2d_jni_b2JointType.c  org_box2d_jni_b2RecQueryType.c  org_box2d_jni_b2ShapeType.c  org_box2d_jni_b2TOIState.c  org_box2d_jni_b2TreeNodeFlags.c  org_box2d_jni_include_Base.c  org_box2d_jni_include_Box2d.c  org_box2d_jni_include_Collision.c  org_box2d_jni_include_Id.c  org_box2d_jni_include_MathFunctions.c  org_box2d_jni_include_Types.c
modules/libraries/box2d-bindings/scripts/: android.gradle  desktop.gradle
modules/libraries/box2d-core/: build.gradle
modules/libraries/box2d-core/src/main/java/org/box2d/jni/: b2AABB.java  b2AllocFcn.java  b2AllocFcnI.java  b2AssertFcn.java  b2AssertFcnI.java  b2BodyDef.java  b2BodyEvents.java  b2BodyId.java  b2BodyMoveEvent.java  b2BodyType.java  b2BoxCastInput.java  b2Capacity.java  b2Capsule.java  b2CastOutput.java  b2CastResultFcn.java  b2CastResultFcnI.java  b2ChainDef.java  b2ChainId.java  b2ChainSegment.java  b2Circle.java  b2CollisionPlane.java  b2ContactBeginTouchEvent.java  b2ContactData.java  b2ContactEndTouchEvent.java  b2ContactEvents.java  b2ContactHitEvent.java  b2ContactId.java  b2CosSin.java  b2Counters.java  b2CustomFilterFcn.java  b2CustomFilterFcnI.java  b2DebugDraw.java  b2DistanceInput.java  b2DistanceJointDef.java  b2DistanceOutput.java  b2DynamicTree.java  b2EnqueueTaskCallback.java  b2EnqueueTaskCallbackI.java  b2ExplosionDef.java  b2Filter.java  (+95 more)
modules/libraries/box2d-core/src/main/java/org/box2d/jni/draw/: DrawBoundsFcn.java  DrawBoundsFcnI.java  DrawCircleFcn.java  DrawCircleFcnI.java  DrawLineFcn.java  DrawLineFcnI.java  DrawPointFcn.java  DrawPointFcnI.java  DrawPolygonFcn.java  DrawPolygonFcnI.java  DrawSolidCapsuleFcn.java  DrawSolidCapsuleFcnI.java  DrawSolidCircleFcn.java  DrawSolidCircleFcnI.java  DrawSolidPolygonFcn.java  DrawSolidPolygonFcnI.java  DrawStringFcn.java  DrawStringFcnI.java  DrawTransformFcn.java  DrawTransformFcnI.java
modules/libraries/box2d-core/src/main/java/org/box2d/jni/function/: CCastResultFcn.java  CCustomFilterFcn.java  CDrawBoundsFcn.java  (+17 more)
modules/libraries/core/: build.gradle
modules/libraries/core/src/main/java/org/box2d/jni/: b2AABB.java  b2AllocFcn.java  b2AllocFcnI.java  b2AssertFcn.java  b2AssertFcnI.java  b2BodyDef.java  b2BodyEvents.java  b2BodyType.java  b2Capacity.java  b2CastResultFcn.java  b2CastResultFcnI.java  b2ChainId.java  b2ContactEndTouchEvent.java  b2ContactEvents.java  b2ContactId.java  b2CosSin.java  b2Counters.java  b2CustomFilterFcnI.java  b2DebugDraw.java  b2DistanceJointDef.java  b2EnqueueTaskCallback.java  b2EnqueueTaskCallbackI.java  b2FilterJointDef.java  b2FinishTaskCallback.java  b2FinishTaskCallbackI.java  b2FreeFcnI.java  b2FrictionCallback.java  b2FrictionCallbackI.java  b2JointDef.java  b2JointEvent.java  b2JointEvents.java  b2LogFcn.java  b2Manifold.java  b2Mat22.java  b2MotionLocks.java  b2MotorJointDef.java  b2OverlapResultFcn.java  b2Plane.java  b2PlaneResult.java  b2PlaneResultFcn.java  (+22 more)
modules/samples/: build.gradle
modules/samples/src/main/java/org/box2d/jni/: HelloBox2D.java  Main.java
(+261 files in other folders)
